--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,3 +3,70 @@
 *::after {
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.board {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1200px;
+    text-align: center;
+}
+
+.column-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.column {
+    margin: 10px;
+    border: 1px solid orangered;
+    background-color: rgba(orangered, .1);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.column-card-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.card {
+    border-radius: 5px;
+    background-color: white;
+    margin: 5px;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+}
+
+.card-description {
+    padding: 5px;
+    margin: 5px;
+}
+
+button {
+    margin: 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: rgba(orangered, .7);
+    font-size: 15px;
+    line-height: 15px;
+    width: 25px;
+    height: 25px;
+    color: white;
+    cursor: pointer;
+    transition: all .2s ease-in;
+
+    &:hover,
+    &:active {
+        background-color: red;
+    }
+}
